<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Museums In</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="btn_name_all">All</string>
    <string name="btn_name_art">Art</string>
    <string name="btn_name_free">Free</string>
    <string name="btn_name_history">History</string>
    <string name="btn_name_houses">Houses</string>
    <string name="btn_name_science">Science</string>

</resources>
